# uguu.se-desktop

./: README.md  main.py  pyproject.toml  requirements-mobile.txt  requirements.txt  uguu_desktop.py  uguu_desktop.spec
.github/workflows/: build-all.yml  build-apk.yml  build.yml
